# klar-id

./: .env.example  .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md
migrations/: 20250825120149_create_users.down.sql  20250825120149_create_users.up.sql
src/: main.rs  openapi.rs
src/apps/auth/: handlers.rs  mod.rs  models.rs  routers.rs
src/apps/health/: handlers.rs  mod.rs  routers.rs
src/apps/users/: handlers.rs  mod.rs  models.rs  routers.rs
src/auth/: errors.rs  handlers.rs  jwt.rs  mod.rs  models.rs  routers.rs
src/core/: db.rs  errors.rs  jwt.rs  mod.rs  openapi.rs
src/health/: handlers.rs  mod.rs  routers.rs
src/users/: handlers.rs  routers.rs
