[package]
name = "blaze"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
env_logger = "0.11.8"
log = "0.4.27"
dotenvy = "0.15.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.143"
svix-ksuid = { version = "0.8.0", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
utoipa = { version = "5.4.0", features = ["chrono"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["actix-web"] }
utoipa-redoc = { version = "6.0.0", features = ["actix-web"]}
sqlx = { version = "0.8.6", default-features = false, features = [ "runtime-tokio-native-tls", "postgres", "chrono", "uuid" ] }
jsonwebtoken = "9.2.0"
argon2 = "0.5.3"
rand = "0.8.5"
actix-web-httpauth = "0.8.1"
futures = "0.3.30"
thiserror = "1.0.58"
lazy_static = "1.4.0"

[profile.dev]
debug = true